@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" target-language="it" datatype="plaintext" original="messages" date="2019-10-03T10:30:04Z" product-name="macina_searchbox">
+		<header/>
+		<body>
+			<trans-unit id="tt_content.list_type" xml:space="preserve" approved="yes">
+				<source>Searchbox</source>
+				<target>Searchbox</target>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
