@@ -1,56 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-    <meta type="array">
-        <description></description>
-        <type>database</type>
-        <csh_table></csh_table>
-        <labelContext type="array">
-        </labelContext>
-    </meta>
-    <data type="array">
-        <languageKey index="default" type="array">
-            <label index="tt_content.list_type">Searchbox</label>
-        </languageKey>
-        <languageKey index="de" type="array">
-            <label index="tt_content.list_type">Suchbox</label>
-        </languageKey>
-        <languageKey index="fi" type="array">
-            <label index="tt_content.list_type">Hakulaatikko</label>
-        </languageKey>
-        <languageKey index="it" type="array">
-            <label index="tt_content.list_type">Searchbox</label>
-        </languageKey>
-        <languageKey index="pl" type="array">
-            <label index="tt_content.list_type">Wyszukiwarka</label>
-        </languageKey>
-    </data>
-    <orig_hash type="array">
-        <languageKey index="default" type="array">
-            <label index="tt_content.list_type" type="integer">136199813</label>
-        </languageKey>
-        <languageKey index="de" type="array">
-            <label index="tt_content.list_type" type="integer">136199813</label>
-        </languageKey>
-        <languageKey index="fi" type="array">
-            <label index="tt_content.list_type" type="integer">136199813</label>
-        </languageKey>
-        <languageKey index="it" type="array">
-            <label index="tt_content.list_type" type="integer">136199813</label>
-        </languageKey>
-        <languageKey index="pl" type="array">
-            <label index="tt_content.list_type" type="integer">136199813</label>
-        </languageKey>
-    </orig_hash>
-    <orig_text type="array">
-        <languageKey index="default" type="array">
-        </languageKey>
-        <languageKey index="de" type="array">
-        </languageKey>
-        <languageKey index="fi" type="array">
-        </languageKey>
-        <languageKey index="it" type="array">
-        </languageKey>
-        <languageKey index="pl" type="array">
-        </languageKey>
-    </orig_text>
-</T3locallang>
