@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" target-language="pl" datatype="plaintext" original="messages" date="2019-10-03T10:29:42Z" product-name="macina_searchbox">
+		<header/>
+		<body>
+			<trans-unit id="pi1_title" xml:space="preserve" approved="yes">
+				<source>Searchbox</source>
+				<target>Wyszukiwarka</target>
+			</trans-unit>
+			<trans-unit id="pi1_plus_wiz_description" xml:space="preserve" approved="yes">
+				<source>Adds a Searchbox to the page.</source>
+				<target>Dodaje okienko wyszukiwania do strony</target>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
